tests/integration/snapshots/mappings/unknown_prefix.txt
Error: [ROOT]/contracts/main[LINE]: error: Failed to import: Unknown path mapping '@core'
   2 |             import "@core/math"
     |                    ^^^^^^^^^^^^

